Bug 485451 - Redraw the titlebar when a *titlebarcolor attribute changes. r=josh, sr=roc